// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateWebPackConfig getCommon sends proper stuff depending on isDev 1`] = `
Object {
  "context": "/foo/bar",
  "devtool": "source-map",
  "externals": Object {
    "jquery": "jQuery",
  },
  "mode": "production",
  "name": "config1",
  "target": "web",
  "watch": false,
}
`;

exports[`CreateWebPackConfig getCommon sends proper stuff depending on isDev 2`] = `
Object {
  "context": "/foo/bar",
  "devtool": "inline-source-map",
  "externals": Object {
    "jquery": "jQuery",
  },
  "mode": "development",
  "name": "config1",
  "target": "web",
  "watch": true,
}
`;

exports[`CreateWebPackConfig getModule matches snapshot 1`] = `
Object {
  "rules": Array [
    Object {
      "exclude": /\\(node_modules\\|bower_components\\)/,
      "test": /\\\\\\.m\\?jsx\\?\\$/,
      "use": Array [
        Object {
          "loader": "babel-loader",
          "options": Object {
            "babelrc": false,
            "configFile": false,
            "presets": Array [
              Array [
                "@wpackio/base",
                Object {
                  "hasReact": true,
                  "presetEnv": Object {
                    "targets": Object {
                      "chrome": "69",
                      "edge": "17",
                      "firefox": "62",
                    },
                  },
                },
              ],
            ],
          },
        },
      ],
    },
    Object {
      "exclude": /\\(node_modules\\)/,
      "test": /\\\\\\.tsx\\?\\$/,
      "use": Array [
        Object {
          "loader": "babel-loader",
          "options": Object {
            "babelrc": false,
            "configFile": false,
            "presets": Array [
              Array [
                "@wpackio/base",
                Object {
                  "hasReact": true,
                  "presetEnv": Object {
                    "targets": Object {
                      "chrome": "69",
                      "edge": "17",
                      "firefox": "62",
                    },
                  },
                },
              ],
              Array [
                "@babel/preset-typescript",
              ],
            ],
          },
        },
      ],
    },
    Object {
      "test": /\\\\\\.\\(sa\\|sc\\|c\\)ss\\$/,
      "use": Array [
        "style-loader",
        Object {
          "loader": "css-loader",
          "options": Object {
            "importLoaders": 1,
            "sourceMap": true,
          },
        },
        "postcss-loader",
        Object {
          "loader": "sass-loader",
          "options": Object {
            "sourceMap": true,
          },
        },
      ],
    },
    Object {
      "issuer": [Function],
      "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\|png\\|jpg\\|gif\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
      "use": Array [
        Object {
          "loader": "file-loader",
          "options": Object {
            "name": "[name]-[hash:8].[ext]",
            "outputPath": "config1/assets/",
          },
        },
      ],
    },
    Object {
      "issuer": [Function],
      "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\|png\\|jpg\\|gif\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
      "use": Array [
        Object {
          "loader": "file-loader",
          "options": Object {
            "name": "[name]-[hash:8].[ext]",
            "outputPath": "config1/assets/",
            "publicPath": undefined,
          },
        },
      ],
    },
  ],
}
`;

exports[`CreateWebPackConfig getOptimization returns object when in use 1`] = `
Object {
  "runtimeChunk": "single",
  "splitChunks": Object {
    "cacheGroups": Object {
      "default": Object {
        "minChunks": 2,
        "priority": -20,
        "reuseExistingChunk": true,
      },
      "vendors": Object {
        "priority": -10,
        "test": /\\[\\\\\\\\\\\\/\\]node_modules\\[\\\\\\\\\\\\/\\]/,
      },
    },
    "chunks": "all",
    "maxAsyncRequests": 5,
    "maxInitialRequests": 3,
    "minChunks": 1,
    "minSize": 30000,
    "name": true,
  },
}
`;

exports[`CreateWebPackConfig getPlugins has proper plugins for build mode 1`] = `
Array [
  DefinePlugin {
    "definitions": Object {
      "__WPACKIO__": Object {
        "appName": "\\"wpackio\\"",
        "outputPath": "\\"dist\\"",
      },
      "process.env.BABEL_ENV": "\\"production\\"",
      "process.env.NODE_ENV": "\\"production\\"",
    },
  },
  CleanWebpackPlugin {
    "apply": [Function],
    "cleanAfterEveryBuildPatterns": Array [],
    "cleanOnceBeforeBuildPatterns": Array [
      "**/*",
    ],
    "cleanStaleWebpackAssets": true,
    "currentAssets": Array [],
    "dangerouslyAllowCleanPatternsOutsideProject": false,
    "dry": false,
    "handleDone": [Function],
    "handleInitial": [Function],
    "initialClean": false,
    "outputPath": "",
    "protectWebpackAssets": true,
    "removeFiles": [Function],
    "verbose": false,
  },
  MiniCssExtractPlugin {
    "options": Object {
      "chunkFilename": "config1/[name]-[contenthash:8].css",
      "filename": "config1/[name]-[contenthash:8].css",
    },
  },
  Object {},
  BannerPlugin {
    "banner": [Function],
    "options": Object {
      "banner": "
WordPress WebPack Bundler

@author Swashata Ghosh
@version 1.0.0
@link https://wpack.io
@license GPL-3.0

Copyright (c) 2018 Swashata Ghosh

This software is released under the GPL-3.0 License
https://opensource.org/licenses/GPL-3.0

Compiled with the help of https://wpack.io
A zero setup Webpack Bundler Script for WordPress",
      "entryOnly": false,
      "include": /\\\\\\.\\(\\(t\\|j\\)sx\\?\\|s\\?\\(c\\|a\\)ss\\)\\$/,
      "raw": false,
    },
  },
]
`;

exports[`CreateWebPackConfig getPlugins has proper plugins for dev mode 1`] = `
Array [
  TimeFixPlugin {
    "watchOffset": 11000,
  },
  DefinePlugin {
    "definitions": Object {
      "__WPACKIO__": Object {
        "appName": "\\"wpackio\\"",
        "outputPath": "\\"dist\\"",
      },
      "process.env.BABEL_ENV": "\\"development\\"",
      "process.env.NODE_ENV": "\\"development\\"",
    },
  },
  CleanWebpackPlugin {
    "apply": [Function],
    "cleanAfterEveryBuildPatterns": Array [],
    "cleanOnceBeforeBuildPatterns": Array [
      "**/*",
    ],
    "cleanStaleWebpackAssets": true,
    "currentAssets": Array [],
    "dangerouslyAllowCleanPatternsOutsideProject": false,
    "dry": false,
    "handleDone": [Function],
    "handleInitial": [Function],
    "initialClean": false,
    "outputPath": "",
    "protectWebpackAssets": true,
    "removeFiles": [Function],
    "verbose": false,
  },
  MiniCssExtractPlugin {
    "options": Object {
      "chunkFilename": "config1/[name].css",
      "filename": "config1/[name].css",
    },
  },
  Object {},
  HotModuleReplacementPlugin {
    "fullBuildTimeout": 200,
    "multiStep": undefined,
    "options": Object {},
    "requestTimeout": 10000,
  },
  WatchMissingNodeModulesPlugin {
    "nodeModulesPath": "/foo/bar/node_modules",
  },
]
`;
